--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "32033"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        " (('z', 'x'), 1)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P = N.float()\n",
+    "P = P/P.sum(1, keepdim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# P[0].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -809,13 +839,63 @@
     "for i in range(20):\n",
     "    out=[]\n",
     "    while True:\n",
-    "        p = N[ix].float()\n",
-    "        p /= p.sum()\n",
+    "        p = P[ix]\n",
     "        ix = torch.multinomial(p, num_samples = 1, replacement=True, generator = g).item()\n",
     "        out.append(itos[ix])\n",
     "        if ix == 0:\n",
     "            break\n",
     "    print(''.join(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".e: 0.0478 -3.0408\n",
+      "em: 0.0377 -3.2793\n",
+      "mm: 0.0253 -3.6772\n",
+      "ma: 0.3899 -0.9418\n",
+      "a.: 0.1960 -1.6299\n",
+      ".o: 0.0123 -4.3982\n",
+      "ol: 0.0780 -2.5508\n",
+      "li: 0.1777 -1.7278\n",
+      "iv: 0.0152 -4.1867\n",
+      "vi: 0.3541 -1.0383\n",
+      "ia: 0.1381 -1.9796\n",
+      "a.: 0.1960 -1.6299\n",
+      ".a: 0.1377 -1.9829\n",
+      "av: 0.0246 -3.7045\n",
+      "va: 0.2495 -1.3882\n",
+      "a.: 0.1960 -1.6299\n",
+      "log_likelihood=tensor(-38.7856)\n",
+      "nll=tensor(38.7856)\n",
+      "2.424102306365967\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_likelihood = 0.0\n",
+    "n = 0\n",
+    "for w in words[:3]:\n",
+    "    chs = ['.']+list(w)+['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        prob = P[ix1, ix2]\n",
+    "        logprob = torch.log(prob)\n",
+    "        log_likelihood += logprob\n",
+    "        n += 1\n",
+    "        print(f'{ch1}{ch2}: {prob:.4f} {logprob:.4f}')\n",
+    "\n",
+    "print(f'{log_likelihood=}')\n",
+    "nll = -log_likelihood\n",
+    "print(f'{nll=}')\n",
+    "print(f'{nll/n}')"
    ]
   }
  ],
