--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -773,37 +773,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "P = N.float()\n",
+    "P = (N+1).float()\n",
     "P = P/P.sum(1, keepdim=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1.)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# P[0].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -814,29 +794,14 @@
       "lenican.\n",
       "n.\n",
       "t.\n",
-      "y.\n",
-      "janan.\n",
-      "h.\n",
-      "analenn.\n",
-      "ikei.\n",
-      "iahee.\n",
-      "jan.\n",
-      "ma.\n",
-      "sonnen.\n",
-      "kon.\n",
-      "jwyn.\n",
-      "da.\n",
-      "dylalieito.\n",
-      "rka.\n",
-      "rielamenale.\n",
-      "h.\n"
+      "y.\n"
      ]
     }
    ],
    "source": [
     "g = torch.Generator().manual_seed(21474834)\n",
     "ix = 0\n",
-    "for i in range(20):\n",
+    "for i in range(5):\n",
     "    out=[]\n",
     "    while True:\n",
     "        p = P[ix]\n",
@@ -849,32 +814,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".e: 0.0478 -3.0408\n",
+      ".e: 0.0478 -3.0410\n",
       "em: 0.0377 -3.2793\n",
-      "mm: 0.0253 -3.6772\n",
-      "ma: 0.3899 -0.9418\n",
-      "a.: 0.1960 -1.6299\n",
-      ".o: 0.0123 -4.3982\n",
-      "ol: 0.0780 -2.5508\n",
-      "li: 0.1777 -1.7278\n",
-      "iv: 0.0152 -4.1867\n",
-      "vi: 0.3541 -1.0383\n",
-      "ia: 0.1381 -1.9796\n",
-      "a.: 0.1960 -1.6299\n",
-      ".a: 0.1377 -1.9829\n",
-      "av: 0.0246 -3.7045\n",
-      "va: 0.2495 -1.3882\n",
-      "a.: 0.1960 -1.6299\n",
-      "log_likelihood=tensor(-38.7856)\n",
-      "nll=tensor(38.7856)\n",
-      "2.424102306365967\n"
+      "mm: 0.0253 -3.6753\n",
+      "ma: 0.3885 -0.9454\n",
+      "a.: 0.1958 -1.6305\n",
+      ".o: 0.0123 -4.3965\n",
+      "ol: 0.0779 -2.5526\n",
+      "li: 0.1774 -1.7293\n",
+      "iv: 0.0152 -4.1845\n",
+      "vi: 0.3508 -1.0476\n",
+      "ia: 0.1380 -1.9807\n",
+      "a.: 0.1958 -1.6305\n",
+      ".a: 0.1376 -1.9835\n",
+      "av: 0.0246 -3.7041\n",
+      "va: 0.2473 -1.3971\n",
+      "a.: 0.1958 -1.6305\n",
+      "log_likelihood=tensor(-38.8086)\n",
+      "nll=tensor(38.8086)\n",
+      "2.4255354404449463\n"
      ]
     }
    ],
@@ -896,6 +861,224 @@
     "nll = -log_likelihood\n",
     "print(f'{nll=}')\n",
     "print(f'{nll/n}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of elements: 228146\n"
+     ]
+    }
+   ],
+   "source": [
+    "xs, ys = [], []\n",
+    "\n",
+    "for w in words:\n",
+    "    chs = ['.']+list(w)+['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        xs.append(ix1)\n",
+    "        ys.append(ix2)\n",
+    "\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)\n",
+    "\n",
+    "num = xs.nelement()\n",
+    "print('number of elements:', num)\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27,27), generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.470309257507324\n",
+      "2.470139265060425\n",
+      "2.4699721336364746\n",
+      "2.469808340072632\n",
+      "2.4696476459503174\n",
+      "2.4694902896881104\n",
+      "2.4693357944488525\n",
+      "2.469183921813965\n",
+      "2.4690351486206055\n",
+      "2.468888998031616\n",
+      "2.468745708465576\n",
+      "2.468604803085327\n",
+      "2.4684665203094482\n",
+      "2.4683308601379395\n",
+      "2.4681973457336426\n",
+      "2.468066453933716\n",
+      "2.467937469482422\n",
+      "2.467811107635498\n",
+      "2.467686891555786\n",
+      "2.467564582824707\n",
+      "2.467444658279419\n",
+      "2.4673266410827637\n",
+      "2.4672107696533203\n",
+      "2.4670965671539307\n",
+      "2.466984510421753\n",
+      "2.4668736457824707\n",
+      "2.4667649269104004\n",
+      "2.466658353805542\n",
+      "2.466553211212158\n",
+      "2.466449737548828\n",
+      "2.4663476943969727\n",
+      "2.46624755859375\n",
+      "2.466148853302002\n",
+      "2.4660518169403076\n",
+      "2.465956211090088\n",
+      "2.4658620357513428\n",
+      "2.4657692909240723\n",
+      "2.4656779766082764\n",
+      "2.465587854385376\n",
+      "2.4654994010925293\n",
+      "2.465412139892578\n",
+      "2.4653263092041016\n",
+      "2.4652416706085205\n",
+      "2.4651577472686768\n",
+      "2.4650752544403076\n",
+      "2.464994430541992\n",
+      "2.464914083480835\n",
+      "2.4648356437683105\n",
+      "2.4647576808929443\n",
+      "2.4646811485290527\n",
+      "2.4646053314208984\n",
+      "2.4645307064056396\n",
+      "2.4644570350646973\n",
+      "2.4643845558166504\n",
+      "2.464312791824341\n",
+      "2.4642422199249268\n",
+      "2.46417236328125\n",
+      "2.464103937149048\n",
+      "2.464035749435425\n",
+      "2.4639687538146973\n",
+      "2.463902711868286\n",
+      "2.4638376235961914\n",
+      "2.463773250579834\n",
+      "2.4637093544006348\n",
+      "2.463646411895752\n",
+      "2.4635841846466064\n",
+      "2.4635231494903564\n",
+      "2.4634628295898438\n",
+      "2.46340274810791\n",
+      "2.463343620300293\n",
+      "2.4632856845855713\n",
+      "2.4632275104522705\n",
+      "2.4631710052490234\n",
+      "2.4631147384643555\n",
+      "2.4630589485168457\n",
+      "2.4630041122436523\n",
+      "2.4629499912261963\n",
+      "2.4628963470458984\n",
+      "2.462843418121338\n",
+      "2.4627907276153564\n",
+      "2.4627389907836914\n",
+      "2.4626877307891846\n",
+      "2.462637186050415\n",
+      "2.4625871181488037\n",
+      "2.4625375270843506\n",
+      "2.4624886512756348\n",
+      "2.462440013885498\n",
+      "2.4623923301696777\n",
+      "2.4623448848724365\n",
+      "2.4622979164123535\n",
+      "2.4622514247894287\n",
+      "2.462205648422241\n",
+      "2.462160587310791\n",
+      "2.4621152877807617\n",
+      "2.462070941925049\n",
+      "2.462027072906494\n",
+      "2.4619834423065186\n",
+      "2.461940288543701\n",
+      "2.4618980884552\n",
+      "2.461855173110962\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in range(100):\n",
+    "    #forward pass\n",
+    "    xenc = F.one_hot(xs, num_classes=27).float()\n",
+    "    logits = xenc @ W\n",
+    "    counts = logits.exp()\n",
+    "    probs = counts / counts.sum(1, keepdims=True)\n",
+    "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean()\n",
+    "    # loss is mean of -log of probs added with regularization mean. The higher the regularization, the more the weights tend to 0\n",
+    "\n",
+    "    print(loss.item())\n",
+    "\n",
+    "    #backward pass\n",
+    "    W.grad = None\n",
+    "    loss.backward()\n",
+    "\n",
+    "    #update the weights\n",
+    "    W.data += -50 * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "junide.\n",
+      "janasah.\n",
+      "prelay.\n",
+      "a.\n",
+      "nn.\n",
+      "kohin.\n",
+      "tolian.\n",
+      "juee.\n",
+      "ksahnaauranilevias.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sampling from the model\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    out = []\n",
+    "    ix = 0\n",
+    "    while True:\n",
+    "        xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()\n",
+    "        logits = xenc @ W\n",
+    "        counts = logits.exp()\n",
+    "        p = counts / counts.sum(1, keepdims=True)\n",
+    "\n",
+    "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itos[ix])\n",
+    "        if ix == 0:\n",
+    "            break\n",
+    "\n",
+    "    print(''.join(out))"
    ]
   }
  ],
